feat: added the prisma functionality completely

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     ]
   },
   "dependencies": {
+    "@prisma/client": "^6.6.0",
     "axios": "^1.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -68,6 +69,7 @@
     "lint-staged": "^15.4.3",
     "nx": "20.4.2",
     "prettier": "^2.6.2",
+    "prisma": "^6.6.0",
     "ts-jest": "^29.1.0",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
