--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
-HOST=''
+HOST=4100
 PORT=''
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+API_PREFIX="/api/v1"
+BASE_URL="http://localhost"
