--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,20 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "chrome",
+            "type": "node",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}"
+            "name": "Debug Bus App Node.js Application",
+            "program": "${workspaceFolder}/src/main.ts", // Adjust this path to where your main.ts actually is
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "restart": true,
+            "console": "integratedTerminal",
+            "outFiles": [
+                "${workspaceFolder}/dist/**/*.js"
+            ], // For TypeScript support
+            "preLaunchTask": "tsc: build - tsconfig.json" // Optional: add this if you want to build before launching
         }
     ]
 }
