--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     ]
   },
   "dependencies": {
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "^6.5.0",
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -41,7 +42,8 @@
     "passport": "^0.7.0",
     "request-ip": "^3.3.0",
     "swagger-ui-express": "^5.0.1",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.7.1",
@@ -57,6 +59,7 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
@@ -69,7 +72,7 @@
     "lint-staged": "^15.4.3",
     "nx": "20.4.2",
     "prettier": "^2.6.2",
-    "prisma": "^6.6.0",
+    "prisma": "^6.5.0",
     "ts-jest": "^29.1.0",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
