--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ logs/.f5032361bfe2291541fbb4e1d81d3966e1de68a3-audit.json
 logs/.5e863d02b1050ac6769b1a1b0364549a96e24b36-audit.json
 .gitignore
 .gitignore
+logs/.afbf1c0427fab218cea968405280b98b23abc44a-audit.json
