--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,4 @@ PORT=''
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 API_PREFIX="/api/v1"
 BASE_URL="http://localhost"
+BCRYPT_SALT_ROUNDS="10"
