--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
     "from": "^0.1.7",
+    "helmet": "^8.1.0",
     "import": "^0.0.6",
     "jsonwebtoken": "^9.0.2",
     "mailgen": "^2.0.29",
@@ -41,6 +42,7 @@
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "request-ip": "^3.3.0",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
