--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,5 @@ DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=pub
 API_PREFIX="/api/v1"
 BASE_URL="http://localhost"
 BCRYPT_SALT_ROUNDS="10"
+ACCESS_TOKEN_SECRET="your_access_token_secret_here"
+REFRESH_TOKEN_SECRET="your_refresh_token_secret_here"
