--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,20 +1,18 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Debug Bus App Node.js Application",
-            "program": "${workspaceFolder}/src/main.ts", // Adjust this path to where your main.ts actually is
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "restart": true,
-            "console": "integratedTerminal",
-            "outFiles": [
-                "${workspaceFolder}/dist/**/*.js"
-            ], // For TypeScript support
-            "preLaunchTask": "tsc: build - tsconfig.json" // Optional: add this if you want to build before launching
-        }
-    ]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Debug NX Application",
+      "skipFiles": ["<node_internals>/**"],
+      "program": "${workspaceFolder}/node_modules/nx/bin/nx.js",
+      "args": ["serve", "Node_NX"],
+      "cwd": "${workspaceFolder}",
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "sourceMaps": true,
+      "outFiles": ["${workspaceFolder}/dist/**/*.js"]
+    }
+  ]
 }
