--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "@types/socket.io": "^3.0.1",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
@@ -42,6 +43,7 @@
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "request-ip": "^3.3.0",
+    "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0",
