--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "prepare": "husky",
     "pre-commit": "lint-staged",
     "lint": "eslint . --ext .ts",
-    "format": "prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\"",
+    "dev": "NODE_ENV=development nx serve --configuration=development",
+    "cloud": "NODE_ENV=production nx serve --configuration=production"
   },
   "nx": {
     "includedScripts": []
