--- a/project.json
+++ b/project.json
@@ -27,9 +27,22 @@
         }
       },
       "configurations": {
-        "development": {},
+        "development": {
+          "fileReplacements": [
+            {
+              "replace": "src/environments/environment.ts",
+              "with": "src/environments/environment.development.ts"
+            }
+          ]
+        },
         "production": {
           "generateLockfile": true,
+          "fileReplacements": [
+            {
+              "replace": "src/environments/environment.ts",
+              "with": "src/environments/environment.production.ts"
+            }
+          ],
           "esbuildOptions": {
             "sourcemap": false,
             "outExtension": {
