--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
     "dev": "NODE_ENV=development nx serve --configuration=development",
-    "cloud": "NODE_ENV=production nx serve --configuration=production"
+    "cloud": "NODE_ENV=production nx serve --configuration=production",
+    "prisma:generate": "node scripts/prisma-env.js prisma generate",
+    "prisma:migrate": "node scripts/prisma-env.js prisma migrate dev",
+    "prisma:studio": "node scripts/prisma-env.js prisma studio",
+    "prisma:db": "node scripts/prisma-env.js prisma db pull"
   },
   "nx": {
     "includedScripts": []
