--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "pre-commit": "lint-staged",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
-    "dev": "NODE_ENV=development nx serve --configuration=development",
-    "cloud": "NODE_ENV=production nx serve --configuration=production",
+    "dev": "NODE_ENV=development npm run prisma:db && npm run prisma:generate && nx serve --configuration=development",
+    "cloud": "NODE_ENV=production npm run prisma:db && npm run prisma:generate && nx serve --configuration=production",
     "prisma:generate": "node scripts/prisma-env.js prisma generate",
     "prisma:migrate": "node scripts/prisma-env.js prisma migrate dev",
     "prisma:studio": "node scripts/prisma-env.js prisma studio",
