--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
-    "build": "nx build",
+    "build": "nx build --configuration=production",
+    "build:prod": "NODE_ENV=production nx build --configuration=production",
     "prepare": "husky",
     "pre-commit": "lint-staged",
     "lint": "eslint . --ext .ts",
