--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "helmet": "^8.1.0",
     "import": "^0.0.6",
     "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.12.8",
     "mailgen": "^2.0.29",
     "morgan": "^1.10.0",
     "nodemailer": "^6.10.0",
