--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "request-ip": "^3.3.0",
+    "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "twilio": "^5.6.0",
