--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     ]
   },
   "dependencies": {
+    "@google-cloud/speech": "^7.1.0",
+    "@google-cloud/text-to-speech": "^6.1.0",
+    "@google-cloud/vertexai": "^1.10.0",
     "@prisma/client": "^6.7.0",
     "@types/socket.io": "^3.0.1",
     "axios": "^1.6.0",
