--- a/package.json
+++ b/package.json
@@ -37,10 +37,13 @@
     "@google-cloud/text-to-speech": "^6.1.0",
     "@google-cloud/vertexai": "^1.10.0",
     "@google/genai": "^1.0.0",
+    "@pinecone-database/pinecone": "^6.1.1",
     "@prisma/client": "^6.7.0",
+    "@supabase/supabase-js": "^2.50.1",
     "@types/socket.io": "^3.0.1",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.56.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -51,12 +54,16 @@
     "from": "^0.1.7",
     "helmet": "^8.1.0",
     "import": "^0.0.6",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.12.8",
     "mailgen": "^2.0.29",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
     "nodemailer": "^6.10.0",
+    "openai": "^5.7.0",
     "passport": "^0.7.0",
+    "pdf-parse": "^1.1.1",
     "request-ip": "^3.3.0",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
