added the changes for the files and made this awesome for document upload in big upload also done

--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
     "dev": "NODE_ENV=development npm run prisma:db && npm run prisma:generate && nx serve --configuration=development",
+    "dev:worker": "NODE_ENV=development npm run prisma:generate && npm run build && node dist/Node_NX/src/worker.js",
+    "dev:app": "NODE_ENV=development npm run prisma:db && npm run prisma:generate && PORT=8080 nx serve --configuration=development",
+    "dev:worker-only": "NODE_ENV=development npm run prisma:generate && npm run build && PORT=8081 node dist/Node_NX/src/worker.js",
+    "dev:worker-memory": "NODE_ENV=development npm run prisma:generate && npm run build && PORT=8081 node --max-old-space-size=4096 --expose-gc dist/Node_NX/src/worker.js",
+    "dev:worker-aggressive": "NODE_ENV=development npm run prisma:generate && npm run build && PORT=8081 node --max-old-space-size=8192 --expose-gc --optimize-for-size dist/Node_NX/src/worker.js",
+    "clear-memory": "./scripts/clear-memory.sh",
     "cloud": "NODE_ENV=production npm run prisma:db && npm run prisma:generate && nx serve --configuration=production",
     "prisma:generate": "node scripts/prisma-env.js prisma generate",
     "prisma:migrate": "node scripts/prisma-env.js prisma migrate dev",
@@ -37,6 +43,7 @@
     "@google-cloud/text-to-speech": "^6.1.0",
     "@google-cloud/vertexai": "^1.10.0",
     "@google/genai": "^1.0.0",
+    "@huggingface/inference": "^4.0.6",
     "@pinecone-database/pinecone": "^6.1.1",
     "@prisma/client": "^6.7.0",
     "@supabase/supabase-js": "^2.50.1",
@@ -61,7 +68,6 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "nodemailer": "^6.10.0",
-    "openai": "^5.7.0",
     "passport": "^0.7.0",
     "pdf-parse": "^1.1.1",
     "request-ip": "^3.3.0",
@@ -102,6 +108,7 @@
     "prettier": "^2.6.2",
     "prisma": "^6.7.0",
     "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.2",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0"
