--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
   "dependencies": {
     "@deepgram/sdk": "^4.5.1",
     "@elevenlabs/elevenlabs-js": "^2.4.0",
+    "@google-cloud/dialogflow-cx": "^5.1.0",
     "@google-cloud/speech": "^7.1.0",
     "@google-cloud/text-to-speech": "^6.1.0",
     "@google-cloud/vertexai": "^1.10.0",
     "@google/genai": "^1.0.0",
+    "@google/generative-ai": "^0.24.1",
     "@huggingface/inference": "^4.0.6",
     "@pinecone-database/pinecone": "^6.1.1",
     "@prisma/client": "^6.7.0",
@@ -70,6 +72,7 @@
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "pdf-parse": "^1.1.1",
+    "redis": "^5.5.6",
     "request-ip": "^3.3.0",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
