--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "twilio": "^5.6.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.7.1",
