--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "@node-nx/source",
   "version": "0.0.0",
   "private": true,
@@ -19,10 +20,10 @@
     "dev:worker-aggressive": "NODE_ENV=development npm run prisma:generate && npm run build && PORT=8081 node --max-old-space-size=8192 --expose-gc --optimize-for-size dist/Node_NX/src/worker.js",
     "clear-memory": "./scripts/clear-memory.sh",
     "cloud": "NODE_ENV=production npm run prisma:db && npm run prisma:generate && nx serve --configuration=production",
-    "prisma:generate": "node scripts/prisma-env.js prisma generate",
-    "prisma:migrate": "node scripts/prisma-env.js prisma migrate dev",
-    "prisma:studio": "node scripts/prisma-env.js prisma studio",
-    "prisma:db": "node scripts/prisma-env.js prisma db pull"
+    "prisma:generate": "node scripts/prisma-env.cjs prisma generate",
+    "prisma:migrate": "node scripts/prisma-env.cjs prisma migrate dev",
+    "prisma:studio": "node scripts/prisma-env.cjs prisma studio",
+    "prisma:db": "node scripts/prisma-env.cjs prisma db pull"
   },
   "nx": {
     "includedScripts": []
@@ -69,12 +70,13 @@
     "multer": "^2.0.1",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
+    "pcm-convert": "^1.6.5",
     "pdf-parse": "^1.1.1",
     "request-ip": "^3.3.0",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "twilio": "^5.6.0",
+    "twilio": "^5.7.3",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
