--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "dependencies": {
+    "@alexanderolsen/libsamplerate-js": "^2.1.2",
     "@deepgram/sdk": "^4.5.1",
     "@elevenlabs/elevenlabs-js": "^2.4.0",
     "@google-cloud/speech": "^7.1.0",
